--- a/dpc-web/app/assets/stylesheets/components/_site-blocks.scss
+++ b/dpc-web/app/assets/stylesheets/components/_site-blocks.scss
@@ -44,3 +44,17 @@
     font-size: $h1-font-size;
   }
 }
+
+.card {
+  background-color: $color-white;
+  box-shadow: 0 0 0 rbga(0,0,0, .5);
+  padding: $spacer-3 $spacer-4;
+}
+
+.card--border-top {
+  border-top: 4px solid $color-success-light;
+}
+
+.card--shadow {
+  box-shadow: 0px 0px 50px rgba(0,0,0,0.5);
+}
