--- a/dpc-web/app/views/devise/shared/_links.html.erb
+++ b/dpc-web/app/views/devise/shared/_links.html.erb
@@ -4,8 +4,8 @@
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <h2>New user?</h2>
-  <%= link_to "Sign up", new_registration_path(resource_name), id: 'sign-up', class: "ds-c-button" %>
+  <p class="ds-u-margin-y--0">Already have an account? <%= link_to "Sign up", new_registration_path(resource_name), id: 'sign-up' %></p>
+
 <% end %>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
