DPC-450: Added Implementation Guide to docs
Added the FHIR IG links to the documentation page.

--- a/dpc-web/app/views/docs/reference.html.erb
+++ b/dpc-web/app/views/docs/reference.html.erb
@@ -18,6 +18,9 @@
       <li class="sidenav__item">
         <a href="#" class="sidenav__link">Side nav link</a>
       </li>
+      <li class="sidenav__item">
+        <a href="#dpc-implementation-guide" class="sidenav__link">Implementation Guide</a>
+      </li>
     </ul>
   </div>
   <main class="ds-l-col--12 ds-l-md-col--8" id="main">
