--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -1,7 +1,7 @@
 <% title "Frequently asked questions" %>
 
   <div class="ds-text--lead ds-u-measure--wide">
-    <p>As we continue to gather feedback from users on the Data at the Point of Care (DPC) pilot, we will likekly add more FAQs to this page. If you have a question that is not listed below, please use the <a href="https://groups.google.com/d/forum/dpc-api">DPC Google Group</a>.</p>
+    <p>As CMS continues to gather feedback from users on the Data at the Point of Care (DPC) pilot, it will likekly add more FAQs to this page. If you have a question that is not listed below, please use the <a href="https://groups.google.com/d/forum/dpc-api">DPC Google Group</a>.</p>
   </div>
 
   <div class="usa-accordion usa-accordion--bordered ds-u-margin-top--7">
@@ -87,7 +87,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
 
     <h2 class="usa-accordion__heading">
       <button class="usa-accordion__button" aria-expanded="false" aria-controls="a7">
-        What type of information do we want as feedback?
+        What type of information does CMS want as feedback?
       </button>
     </h2>
     <div id="a7" class="usa-accordion__content">
@@ -104,14 +104,14 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
 
     <h2 class="usa-accordion__heading">
       <button class="usa-accordion__button" aria-expanded="false" aria-controls="a8">
-        How will we make sure that the data is secure and protected?
+        How will CMS make sure that the data is secure and protected?
       </button>
     </h2>
     <div id="a8" class="usa-accordion__content">
       <ul>
         <li>Data at the Point of Care secures Protected Health Information (PHI) and Personally Identifiable Information (PII) and has multiple layers of protection, such as encryption in transit and at rest, security certification requirements of connecting vendors, auditing and analytics to look for suspicious activity, terms of service restrictions, public and private security keys, and IP address restriction.</li>
         <li>Data at the Point of Care is built based on privacy requirements defined by HIPAA and outlined in the Notice of Privacy Practices for Original Medicare. This allows patients to opt out of data sharing.</li>
-        <li>We will be using the pilot to test notification and consent messages and processes that are easy to understand by beneficiaries without adding additional complexity to the sharing of data.</li>
+        <li>CMS will be using the pilot to test notification and consent messages and processes that are easy to understand by beneficiaries without adding additional complexity to the sharing of data.</li>
       </ul>
     </div>
 
@@ -135,7 +135,7 @@ Already using or testing wth FHIR, especially Bulk FHIR</li>
     <div id="a10" class="usa-accordion__content">
       <ul>
         <li>CMS will slowly roll out the tokens to providers based on order of request, their readiness, their experience with FHIR, claims data, Blue Button and BCDA, and our ability to respond.</li>
-        <li>Updates will be posted to the <a href="https://groups.google.com/d/forum/dpc-api">Google Group</a> as we progress through the pilot process.</li>
+        <li>Updates will be posted to the <a href="https://groups.google.com/d/forum/dpc-api">Google Group</a> as CMS progresses through the pilot process.</li>
       </ul>
     </div>
   </div>
