--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -89,7 +89,7 @@
             </button>
           </h2>
           <div id="a0" class="usa-accordion__content">
-            <p>CMS is looking for provider organizations who are interested in connecting first to synthetic claims data and then, after successful testing and validation with the synthetic data, connecting to production claims data for their patients. With a goal of ensuring this information is in the existing clinical workflow, the provider is encouraged to speak to their existing vendors for electronic health records, population health, and record notification to participate with them in the pilot. We are seeking input and feedback from healthcare providers and their technology partners throughout the process.</p>
+            <p>CMS is looking for provider organizations who are interested in connecting first to synthetic claims data and then, after successful testing and validation with the synthetic data, connecting to production claims data for their patients. With a goal of ensuring this information is in the existing clinical workflow, the provider is encouraged to speak to their existing vendors for electronic health records, population health, and record notification to participate with them in the pilot. CMS is seeking input and feedback from healthcare providers and their technology partners throughout the process.</p>
 
             <p>CMS is especially interested in working with healthcare providers who already receive claims from other payers and who have successfully integrated the information into provider's existing workflow. healthcare providers with experience using Blue Button 2.0 or the Beneficiary Claims Data API pilot project are encouraged to request access to the Data at the Point of Care pilot project as well.</p>
 
