update terms of service text

--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -85,7 +85,7 @@
 
         <div class="field ds-u-margin-top--3">
           <%= f.check_box :agree_to_terms, class: 'ds-c-choice' %>
-          <%= f.label :agree_to_terms, 'I agree to the terms of DPC API access' %>
+          <%= f.label :agree_to_terms, 'I agree to the terms service' %>
         </div>
 
         <div class="actions ds-u-margin-top--3">
