--- a/dpc-web/app/views/shared/_alerts.html.erb
+++ b/dpc-web/app/views/shared/_alerts.html.erb
@@ -1,7 +1,7 @@
 <% if notice %>
-  <div><%= notice %></div>
+  <div>notice: <%= notice %></div>
 <% end %>
 
 <% if alert %>
-  <div><%= alert %></div>
+  <div>alert: <%= alert %></div>
 <% end %>
