--- a/dpc-web/app/views/shared/_navbar.html.erb
+++ b/dpc-web/app/views/shared/_navbar.html.erb
@@ -43,7 +43,7 @@ aria-controls="topnav-wrap" aria-label="Close menu">
         </li>
       <% else %>
         <li class="topnav__item">
-          <a class="ds-c-button ds-c-button--medium ds-c-button--primary ds-u-margin-right--2"
+          <a class="topnav__link"
              id="sign-out" href="<%= destroy_user_session_path %>" data-method="delete">
              Sign out
           </a>
