link to landing page

--- a/dpc-web/app/views/dpc_registrations/show.html.erb
+++ b/dpc-web/app/views/dpc_registrations/show.html.erb
@@ -21,15 +21,17 @@
     </div>
 
     <div class="ds-u-border-top--1 ds-u-padding-y--3">
-      <h3>Familiarize yourself with the documentation</h3>
-      <p>Learn about the API endpoints, the FHIR data spec, etc.</p>
-      <p><%= link_to "Read the documentation", docs_path, :class => "ds-c-button ds-c-button--primary" %></p>
+      <h3>Ask your software developer to read the developer documentation. </h3>
+      <p>Need blurb text here</p>
+      <p><%= link_to "API documentation", docs_path, :class => "ds-c-button ds-c-button--primary" %></p>
     </div>
 
     <div class="ds-u-border-top--1 ds-u-padding-y--3">
-      <h3>Read the Frequently Asked Questions</h3>
-      <p>For all other info about the pilot</p>
-      <p><%= link_to "Read frequently asked questions", faq_path %></p>
+      <h3>Still need more information?</h3>
+      <ul>
+        <li><%= link_to "Read frequently asked questions", faq_path %></li>
+        <li><%= link_to "Visit the marking page", home_path %></li>
+      </ul>
     </div>
   </div>
   <div class="ds-l-row--12 ds-l-md-col--3 ds-u-margin-left--auto ">
