--- a/dpc-web/app/views/shared/_alerts.html.erb
+++ b/dpc-web/app/views/shared/_alerts.html.erb
@@ -1,5 +1,9 @@
 <% if notice %>
-  <div><%= notice %></div>
+  <div class="ds-c-alert">
+  <div class="ds-c-alert__body">
+    <h3 class="ds-c-alert__heading"><%= notice %></h3>
+  </div>
+</div>
 <% end %>
 
 <% if alert %>
