some radom updates

--- a/dpc-web/app/views/public/_hero.html.erb
+++ b/dpc-web/app/views/public/_hero.html.erb
@@ -10,11 +10,13 @@
           </div>
         </div>
         <div class="ds-u-margin-top--7">
+          <% unless user_signed_in? %>
           <a id="request_access" href="<%= new_user_registration_path %>" class="ds-c-button ds-c-button--big ds-c-button--success">
             <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" >
             <use xlink:href="/assets/solid.svg#key"></use>
           </svg>
           Request acccess</a>
+          <% end %>
 
           <%= link_to docs_path, :class => "ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" do %>
             <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
