--- a/dpc-web/app/views/dpc_registrations/show.html.erb
+++ b/dpc-web/app/views/dpc_registrations/show.html.erb
@@ -15,23 +15,29 @@
     <p class="ds-text--lead">CMS will respond when it is ready for you to join the pilot. Unfortunately, this could take a bit of time. In the meantime, CMS recommends taking the following actions: </p>
 
     <div class="ds-u-border-top--1 ds-u-padding-y--3 ds-u-margin-top--5">
-      <h3>For any announcements, you should join the Google Group.</h3>
-      <p>The Google Group will keep you posted with the latest news about the Data at the Point of Care (DPC) pilot and allow you to communicate with the DPC team.</p>
+      <h3>Join the Google Group.</h3>
+      <p>Hear announcements, ask questions, and give feedback throughout the pilot process.</p>
       <p><a class="ds-c-button ds-c-button--primary" href="https://groups.google.com/d/forum/dpc-api">Join the Google Group</a></p>
     </div>
 
     <div class="ds-u-border-top--1 ds-u-padding-y--3">
-      <h3>Ask your software developer to read the developer documentation. </h3>
-      <p>Need blurb text here</p>
+      <h3>Ask your software vendors work with you</h3>
+      <p>Tell your software vendors to read the developer documentation so that they can support you in the pilot</p>
       <p><%= link_to "API documentation", docs_path, :class => "ds-c-button ds-c-button--primary" %></p>
     </div>
 
     <div class="ds-u-border-top--1 ds-u-padding-y--3">
-      <h3>Still need more information?</h3>
-      <ul>
-        <li><%= link_to "Read frequently asked questions", faq_path %></li>
-        <li><%= link_to "Visit the marking page", home_path %></li>
-      </ul>
+      <h3>View Frequently Asked Questions </h3>
+      <p>Read answers to common questions that will be updated as the pilot program progresses.</p>
+      <p><%= link_to "Frequently asked questions", faq_path, :class => "ds-c-button ds-c-button--primary" %></p>
+
+    </div>
+
+    <div class="ds-u-border-top--1 ds-u-padding-y--3">
+      <h3>View general information about the pilot</h3>
+      <p>Learn more about the goals of the pilot, the process, and the data involved.</p>
+      <p> <%= link_to "About the pilot", home_path, :class => "ds-c-button ds-c-button--primary" %></p>
+
     </div>
   </div>
   <div class="ds-l-row--12 ds-l-md-col--3 ds-u-margin-left--auto ">
