--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -126,7 +126,7 @@
         <li class="site-process-list__item">
           <h3 class="site-process-list__heading">Request access to the pilot</h3>
           <div class="site-process-list__body">
-            <p>Do this on the <%= link_to "Request access page", new_registration_path(User) %>. Remember, this is a pilot and and the process may move slowly. You can prepare for connection by reviewing the <%= link_to "API documentation", docs_path %>.</p>
+            <p>Do this on the <%= link_to "Request access page", new_registration_path(User) %>. Remember, this is a pilot and and the process may move slowly. You can prepare for connection by asking your software developer to read the <%= link_to "developer documentation", docs_path %>.</p>
           </div>
         </li>
         <li class="site-process-list__item">
