--- a/dpc-web/app/views/devise/registrations/edit.html.erb
+++ b/dpc-web/app/views/devise/registrations/edit.html.erb
@@ -116,7 +116,7 @@
   </div>
 </div>
 
-<div class="ds-l-row">
+<div class="ds-l-row ds-u-margin-top--5">
   <div class="ds-l-col--12 ds-l-md-col--6 ds-u-margin-bottom--1 ds-u-margin-x--auto">
     <div class="card card--border-top--red ">
       <h2 class="ds-u-color--error-dark ds-u-margin-top--0">Danger zone</h2>
