--- a/dpc-web/app/views/devise/registrations/new.html.erb
+++ b/dpc-web/app/views/devise/registrations/new.html.erb
@@ -36,7 +36,7 @@
           <%= f.password_field :password_confirmation, class: "ds-c-field" %>
         </div>
 
-        <h2>Your practice</h2>
+        <h2>Your organization</h2>
 
         <div class="field">
           <%= f.label :organization, "Name of your organization", class: "ds-c-label" %>
