--- a/dpc-web/app/views/public/home.html.erb
+++ b/dpc-web/app/views/public/home.html.erb
@@ -209,10 +209,12 @@ http://hl7.org/fhir/us/bulkdata/2019May/index.html">Bulk FHIR specification</a>.
       <div class="billboard__content">
         <h2 class="billboard__heading">Join the community!</h2>
         <div>
-        <%= link_to new_registration_path(User), :class => "ds-c-button ds-c-button--primary ds-c-button--big ds-u-margin-right--2" do %>
-          <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <use xlink:href="/assets/solid.svg#key"></use>
-          </svg>Request access
+        <% unless user_signed_in? %>
+          <%= link_to new_registration_path(User), :class => "ds-c-button ds-c-button--primary ds-c-button--big ds-u-margin-right--2" do %>
+            <svg class="ds-u-margin-right--1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+              <use xlink:href="/assets/solid.svg#key"></use>
+            </svg>Request access
+          <% end %>
         <% end %>
         <%= link_to "https://groups.google.com/d/forum/dpc-api", :class => "ds-c-button ds-c-button--inverse ds-c-button--inverse--alt ds-c-button--big" do %>
           Join Google Group
