--- a/dpc-web/app/views/devise/registrations/edit.html.erb
+++ b/dpc-web/app/views/devise/registrations/edit.html.erb
@@ -32,7 +32,7 @@
         <div class="field">
           <%= f.label :organization_type, 'Type of organization', class: "ds-c-label" %>
           <%= f.select :organization_type,
-            User::organization_types.keys.each_with_object([]) { |key, memo| memo << [key.humanize, key] },
+            User::organization_types.keys.each_with_object([]) { |key, memo| memo << [key.titleize, key] },
             { include_blank: 'Please select a practice type' },
             class: "ds-c-field",
             value: @user.organization_type
