--- a/dpc-web/app/views/dpc_registrations/profile.html.erb
+++ b/dpc-web/app/views/dpc_registrations/profile.html.erb
@@ -12,7 +12,7 @@
       <h3>Your practice</h3>
       <p>
         <strong>Name:</strong> <%= @dpc_registration.user.organization %><br/>
-        <strong>Type:</strong> <%= @dpc_registration.user.organization_type.humanize %><br/>
+        <strong>Type:</strong> <%= @dpc_registration.user.organization_type.titleize %><br/>
         <strong>Address:</strong><br>
         <%= @dpc_registration.user.address_1 %><br/>
         <% if @dpc_registration.user.address_2.length > 1 %>
