increase margin at bottom of the page

--- a/dpc-web/app/views/docs/reference.html.erb
+++ b/dpc-web/app/views/docs/reference.html.erb
@@ -23,7 +23,7 @@
       </li>
     </ul>
   </div>
-  <main class="ds-l-col--12 ds-l-md-col--8" id="main">
+  <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7" id="main">
 
     <h1>Reference</h1>
 
