--- a/dpc-web/app/views/docs/guide.html.erb
+++ b/dpc-web/app/views/docs/guide.html.erb
@@ -20,7 +20,7 @@
       </li>
     </ul>
   </div>
-  <main class="ds-l-col--12 ds-l-md-col--8" id="main">
+  <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7" id="main">
 
     <h1>Guide</h1>
 
