link logo to IG index

--- a/ig/framework/_includes/header.html
+++ b/ig/framework/_includes/header.html
@@ -42,7 +42,7 @@
   <div class="container"><!-- container -->
 
 <!-- hl7 logo -->
-    <a no-external="true" href="http://hl7.org/fhir">
+    <a no-external="true" href="/ig/index.html">
       <img alt="Data at the Point of Care logo" class="img-responsive logo" src="assets/images/dpc-ig-logo.png"/>
     </a>
 <!-- end hl7 logo -->
