--- a/dpc-web/app/views/docs/reference.html.erb
+++ b/dpc-web/app/views/docs/reference.html.erb
@@ -18,9 +18,12 @@
       <li class="sidenav__item">
         <a href="#" class="sidenav__link">Side nav link</a>
       </li>
+      <li class="sidenav__item">
+        <a href="#dpc-implementation-guide" class="sidenav__link">Implementation Guide</a>
+      </li>
     </ul>
   </div>
-  <main class="ds-l-col--12 ds-l-md-col--8" id="main">
+  <main class="ds-l-col--12 ds-l-md-col--8 ds-u-margin-bottom--7" id="main">
 
     <h1>Reference</h1>
 
