--- a/ig/framework/_includes/header.html
+++ b/ig/framework/_includes/header.html
@@ -3,7 +3,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
    <meta charset="UTF-8"/>
-  <title>{{site.data.fhir.ig.title}}</title>
+  <title>{{site.data.fhir.ig.name}}</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <meta name="description" content="{{site.data.fhir.ig.title}} Implemenation Guide" />
@@ -42,7 +42,7 @@
   <div class="container"><!-- container -->
 
 <!-- hl7 logo -->
-    <a no-external="true" href="http://hl7.org/fhir">
+    <a no-external="true" href="/ig/index.html">
       <img alt="Data at the Point of Care logo" class="img-responsive logo" src="assets/images/dpc-ig-logo.png"/>
     </a>
 <!-- end hl7 logo -->
