--- a/dpc-web/app/views/shared/_google-analytics.html.erb
+++ b/dpc-web/app/views/shared/_google-analytics.html.erb
@@ -1,1 +1,9 @@
-<!-- TODO: GOOGLE ANALYTICS TRACKING CODE -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144775756-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144775756-1');
+</script>
