Update developer documentation and fix website (#148)
* Initial reworking of reference docs.

* Added FHIR examples

Added examples to FHIR IG and to documentation.

* update the left rail links

* comment out tabs in the documentation

* link google group at top of reference page

* Fix login redirect

Updated show controller method to find by id, rather than by object reference.

* Fix profile method as well

--- a/dpc-web/app/views/docs/reference.html.erb
+++ b/dpc-web/app/views/docs/reference.html.erb
@@ -4,19 +4,28 @@
   <div class="ds-l-col--12 ds-l-md-col--4">
     <ul class="sidenav">
       <li class="sidenav__item">
-        <a href="#" class="sidenav__link">Side nav link</a>
+        <a href="#information-on-accessing-and-working-with-the-api" class="sidenav__link">Information on accessing and working with the API</a>
       </li>
       <li class="sidenav__item">
-        <a href="#" class="sidenav__link">Side nav link</a>
+        <a href="#bulk-data" class="sidenav__link">Bulk Data</a>
       </li>
       <li class="sidenav__item">
-        <a href="#" class="sidenav__link">Side nav link</a>
+        <a href="#attribution" class="sidenav__link">Attribution</a>
       </li>
       <li class="sidenav__item">
-        <a href="#" class="sidenav__link">Side nav link</a>
+        <a href="#authentication-and-authorization" class="sidenav__link">Authentication and Authorization</a>
       </li>
       <li class="sidenav__item">
-        <a href="#" class="sidenav__link">Side nav link</a>
+        <a href="#environment" class="sidenav__link">Environment</a>
+      </li>
+      <li class="sidenav__item">
+        <a href="#dpc-metadata" class="sidenav__link">DPC Metadata</a>
+      </li>
+      <li class="sidenav__item">
+        <a href="#exporting-data" class="sidenav__link">Exporting data</a>
+      </li>
+      <li class="sidenav__item">
+        <a href="#attributing-patients-to-providers" class="sidenav__link">Attributing Patients to Providers</a>
       </li>
       <li class="sidenav__item">
         <a href="#dpc-implementation-guide" class="sidenav__link">Implementation Guide</a>
