create meta description helper method

--- a/dpc-web/app/views/pages/terms_of_service.html.erb
+++ b/dpc-web/app/views/pages/terms_of_service.html.erb
@@ -1,4 +1,5 @@
 <% title "Terms of service" %>
+<% meta_tag :description, "Terms of service for the Data at the Point of Care pilot" %>
 
 <div class="ds-u-measure--wide">
   <%= raw(@html_content) %>
