--- a/dpc-web/app/views/shared/_head.html.erb
+++ b/dpc-web/app/views/shared/_head.html.erb
@@ -4,6 +4,9 @@
   </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name='description' content='<%= yield_meta_tag(:description, 'Data at the Point of Care is a CMS pilot API program that enables healthcare providers to deliver high quality care directly to Medicare beneficiaries by making a patient’s Medicare claims data available to the provider for treatment needs.') %>' />
+
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
