--- a/dpc-web/app/views/pages/faq.html.erb
+++ b/dpc-web/app/views/pages/faq.html.erb
@@ -1,4 +1,5 @@
 <% title "Frequently asked questions" %>
+<% meta_tag :description, "Frequently asked questions about the Data at the Point of Care pilot" %>
 
   <div class="ds-text--lead ds-u-measure--wide">
     <p>As CMS continues to gather feedback from users on the Data at the Point of Care (DPC) pilot, it will likekly add more FAQs to this page. If you have a question that is not listed below, please use the <a href="https://groups.google.com/d/forum/dpc-api">DPC Google Group</a>.</p>
