--- a/dpc-web/app/views/devise/registrations/edit.html.erb
+++ b/dpc-web/app/views/devise/registrations/edit.html.erb
@@ -119,8 +119,8 @@
 <div class="ds-l-row ds-u-margin-top--5">
   <div class="ds-l-col--12 ds-l-md-col--6 ds-u-margin-bottom--1 ds-u-margin-x--auto">
     <div class="card card--border-top--red ">
-      <h2 class="ds-u-color--error-dark ds-u-margin-top--0">Danger zone</h2>
-      <p><%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "ds-c-button ds-c-button--danger" %></p>
+      <h2 class="ds-u-color--error-dark ds-u-margin-top--0">Delete my account</h2>
+      <p><%= button_to "Delete my account", registration_path(resource_name), data: { confirm: "Are you sure you want to delete your account?" }, method: :delete, :class => "ds-c-button ds-c-button--danger" %></p>
     </div>
   </div>
 </div>
