--- a/dpc-web/app/views/devise/registrations/edit.html.erb
+++ b/dpc-web/app/views/devise/registrations/edit.html.erb
@@ -45,7 +45,7 @@
         </div>
 
         <div class="field">
-          <%= f.label :address_2, class: "ds-c-label" %>
+          <%= f.label :address_2, "Address 2 (optional)", class: "ds-c-label" %>
           <%= f.text_field :address_2, class: "ds-c-field" %>
         </div>
 
