--- a/dpc-web/app/views/pages/reference.html.erb
+++ b/dpc-web/app/views/pages/reference.html.erb
@@ -4,7 +4,7 @@
   <div class="ds-l-col--12 ds-l-md-col--4">
     <ul class="sidenav">
       <li class="sidenav__item">
-        <a href="#information-on-accessing-and-working-with-the-api" class="sidenav__link">Information on accessing and working with the API</a>
+        <a href="#information-on-accessing-and-working-with-the-api" class="sidenav__link">Accessing and working with the API</a>
       </li>
       <li class="sidenav__item">
         <a href="#bulk-data" class="sidenav__link">Bulk Data</a>
