Added Google Analytics (#151)
* DPC-463: Add Google Analytics to DPC Rails web

* Added Analytics Tracking Code

* Added Analytics to IG

--- a/dpc-web/app/views/shared/_head.html.erb
+++ b/dpc-web/app/views/shared/_head.html.erb
@@ -19,4 +19,6 @@
   <%= csp_meta_tag %>
 
   <%= stylesheet_link_tag    'application', media: 'all' %>
+
+  <%= render partial: 'shared/google-analytics' %>
 </head>
