create helper method to allow overrides to banner text

--- a/dpc-web/app/views/layouts/pages.html.erb
+++ b/dpc-web/app/views/layouts/pages.html.erb
@@ -9,7 +9,9 @@
 
     <header class="page-header">
       <div class="ds-l-container">
-        <h1 class="page-header__heading"><%= yield(:title) %></h1>
+        <h1 class="page-header__heading">
+          <%= content_for?(:banner_title) ? yield(:banner_title) : yield(:title) %>
+        </h1>
       </div>
     </header>
 
