Potentially fixed analytics (needs test)

--- a/ig/framework/_includes/footer.html
+++ b/ig/framework/_includes/footer.html
@@ -42,6 +42,7 @@
 
 <!-- Analytics Below
 ================================================== -->
+{% include analytics.html %}
 
 <!-- add acnhors before the closing body tag. -->
 <script> anchors.add()</script>
